// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`minHeight is falsy 1`] = `
<div
  className="full_size flex-none layout-row layout-align-center-center "
>
  <div
    className="modal_background full_size"
    onClick={[Function]}
  />
  <div
    className="modal flex-none"
    style={
      Object {
        "maxHeight": "calc(0px - (22px * 2))",
        "maxWidth": "90%",
        "minHeight": 0,
        "overflowY": "auto",
        "padding": "22px 33px",
      }
    }
  >
    <Component
      updateDimensions={[Function]}
    />
  </div>
</div>
`;

exports[`shallow render 1`] = `
<div
  className="full_size flex-none layout-row layout-align-center-center "
>
  <div
    className="modal_background full_size"
    onClick={[Function]}
  />
  <div
    className="modal flex-none"
    style={
      Object {
        "maxHeight": "calc(0px - (22px * 2))",
        "maxWidth": "90%",
        "minHeight": 55,
        "overflowY": "auto",
        "padding": "22px 33px",
      }
    }
  >
    <Component
      updateDimensions={[Function]}
    />
  </div>
</div>
`;

exports[`showExit is true 1`] = `
<div
  className="full_size flex-none layout-row layout-align-center-center "
>
  <div
    className="modal_background full_size"
    onClick={[Function]}
  />
  <div
    className="modal flex-none"
    style={
      Object {
        "maxHeight": "calc(0px - (22px * 2))",
        "maxWidth": "90%",
        "minHeight": 55,
        "overflowY": "auto",
        "padding": "22px 33px",
      }
    }
  >
    <i
      className=" exit_icon fa fa-times pointy flex-none"
      onClick={[Function]}
    />
    <Component
      updateDimensions={[Function]}
    />
  </div>
</div>
`;

exports[`state.hidden is true 1`] = `""`;
